# food-delivery-backend

./: .env.example  LICENSE  Makefile  docker-compose.yml  pyproject.toml
init/minio/: minio-setup.sh
init/postgres/: seed.sql
src/: app.py  config.py
