[tool.poetry]

name = "food-delivery-app"
version = "0.1.0"
description = "food-delivery-application"
authors = ["Backend team"]
readme = "README.md"
package-mode = false   #yeh installable library nahi hai, sirf application hai

# package-mode = false
# Bhai yeh library nahi hai, sirf ek application hai — install mat kar isko, bas dependencies install kar
# FastAPI, Django, Flask projects → hamesha package-mode = false
# Koi reusable library bana rahe ho PyPI ke liye → tab package-mode = true (default)
# Toh har application project mein yeh line daalni hai

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
gunicorn = "^21.2.0"
pydantic = "^2.6.0"
pydantic-settings = "^2.2.0"

# Database
sqlalchemy = {extras = ["asyncio"], version = "^2.0.27"}
asyncpg = "^0.29.0"      # async postgres driver
psycopg2-binary = "^2.9.9" # For Alembic (sync)
alembic = "^1.13.1"

# Redis
redis = {extras = ["hiredis"], version = "^5.0.1"}

# Task Queue
celery = {extras = ["redis"], version = "^5.3.6"}

# Auth 
pyjwt = "^2.8.0"
bcrypt = "^4.1.2"
python-multipart = "^0.0.9"

# AWS (Secret Managers, S3)
boto3 = "^1.34.0"

# Observability
sentry-sdk = {extras = ["fastapi"], version = "^2.0.0"}
structlog = "^24.1.0"

# HTTP client 
httpx = "^0.27.0" 

[tool.poetry.group.dev.dependencies] 
pytest = "^8.0.0" 
pytest-asyncio = "^0.23.5" 
pytest-cov = "^4.1.0" 
httpx = "^0.27.0"           # for TestClient 
ruff = "^0.3.0"             # linter + formatter 
mypy = "^1.8.0"             # type checker 

[build-system] 
requires = ["poetry-core"] 
build-backend = "poetry.core.masonry.api"

[tool.ruff] 
line-length = 100 
target-version = "py311" 
 
[tool.ruff.lint] 
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "PIE", "RUF"] 
ignore = ["E501"]  # line length handled by formatter 
 
[tool.mypy] 
python_version = "3.11" 
strict = true 
 
[tool.pytest.ini_options] 
asyncio_mode = "auto" 
testpaths = ["tests"] 